--- a/food-web/pom.xml
+++ b/food-web/pom.xml
@@ -55,7 +55,7 @@
     </dependencies>
 
     <build>
-        <finalName>food</finalName>
+        <finalName>food-master</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
