--- a/food-web/pom.xml
+++ b/food-web/pom.xml
@@ -21,6 +21,13 @@
             <version>1.5</version>
         </dependency>
 
+        <!-- 文件上传依赖-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
