--- a/food-dao/src/main/resources/application-dao.yml
+++ b/food-dao/src/main/resources/application-dao.yml
@@ -3,7 +3,7 @@ spring:
   # 数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://rm-2zebhr6xk778lbo75ko.mysql.rds.aliyuncs.com:3306/youpu?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://rm-2zebhr6xk778lbo75ko.mysql.rds.aliyuncs.com:3306/food?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
     username: food
     password: Ljf13411479616
     # 使用druid连接池，当使用其他连接池的时候，可以指定type类型为对应的数据源
